# dotfiles

./: .Xmodmap  .bashrc  .ideavimrc  .xprofile  README.md  README.org  backup  bookmarks_07_02_24.html  themes.sh  wallpaper.fish
.config/: starship.toml
.config/chadwm/: CMakeLists.txt  README.md
.config/chadwm/chadwm/: config.def.h  dwm.c
.config/chadwm/scripts/: bar.sh  run.sh  wallpaper
.config/doom/: config.el  custom.el  init.el  multiple-cursors-emacs.el  packages.el
.config/fish/: config.fish  fish  fish_plugins  fish_variables
.config/fish/conf.d/: fnm.fish
.config/kitty/: kitty  kitty.conf  kitty.conf.bak
.config/mpd/: mpd  mpd.conf  mpd.db  mpd.state
.config/mpd/playlists/: Losts.m3u
.config/ncmpcpp/: ncmpcpp
.config/nvim/: lazy-lock.json  lazyvim.json
.config/picom/: picom.conf
.config/qtile/: README.md  config.json  config.py  qtile
.config/qtile/core/: __init__.py  groups.py  hooks.py  keys.py  layouts.py  mouse.py  screens.py
.config/qtile/extras/: __init__.py  battery.py  clock.py  drawer.py  groupbox.py  textbox.py
.config/qtile/utils/: change_mod.sh  colors.py  config.py  dir.py  palette.py  settings.py
.config/rofi/: rofi
.config/rofi/config/: mpd.rasi  networkmenu.rasi  (+2 more)
.config/starship/: catppuccin_latte.toml  catppuccin_mocha.toml  everforest.toml  onedark.toml  solarized.toml  tokyonight.toml
.config/wezterm/: config.lua  wezterm.lua
.config/zellij/: config.kdl
.screenlayout/: .screenlayout  dp1.sh  hdmi.sh
angularwar/: .gitignore  pom.xml
documents/: install-arch.org  qtile.org
wallpaper/: wallpaper
(+36 files in other folders)
